--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -97,7 +97,7 @@ $modalTextColor: #333;
  * Misc.
  */
 $borderRadius: 4px;
-$defaultWatermarkLink: '../images/watermark.png';
+$defaultWatermarkLink: '../images/mHealthSolutions.png';
 $sidebarWidth: 220px;
 $popoverMenuPadding: 13px;
 $happySoftwareBackground: transparent;
@@ -156,8 +156,8 @@ $unsupportedDesktopBrowserTextFontSize: 21px;
 /**
  * The size of the default watermark.
  */
-$watermarkWidth: 186px;
-$watermarkHeight: 74px;
+$watermarkWidth: 0px;
+$watermarkHeight: 0px;
 
 /**
  * Welcome page variables.
